Fix blurred image animations

--- a/src/App.css
+++ b/src/App.css
@@ -207,13 +207,41 @@ article p {
   text-align: center;
 }
 
+.blurred-img-backdrop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
+.blurred-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter: blur(4px);
+  background-size: 100%; 
+  background-position: center;
+  transition: background-size .3s;
+}
+
 .img-backdrop:hover img {
   transform:scale(1.1);
 }
 
+.img-backdrop:hover .blurred-img {
+  background-size: 110%; 
+}
+
 .img-backdrop img {
   max-width: 80%;
-  transition: all .25s;
+  transition: all .2s;
 }
 
 .img-title {
